Multiple design changes

--- a/templates/incidents/incident_form.html
+++ b/templates/incidents/incident_form.html
@@ -137,12 +137,10 @@
                     </div>
                     {% endif %}
                     <div class="row form-group" style="text-align: right">
-                      <button type="submit" id="send-report" class="btn btn-primary">Envia</button>
+                      <button type="submit" class="btn btn-primary">Envia</button>
                     </div>
               </form>
             </div>
-        <div class="panel-footer">
-        </div>
     </div>
 
 {% endblock content %}
