--- a/templates/institution/dashboard.html
+++ b/templates/institution/dashboard.html
@@ -3,6 +3,37 @@
 {% block page_header %}{% endblock page_header %}
 {% block content %}
     <div class="row">
+        <div class="col-xl-4 col-lg-6 col-xs-12">
+          <div class="card card-shadow">
+            <div class="card-header card-header-transparent cover overlay">
+              <div class="cover-background h-150" style="background-image: url('http://www.escolaemprenedors.org/nova/wp-content/uploads/2014/06/mercerodoreda.jpg')"></div>
+            </div>
+            <div class="card-block p-x-30 p-y-20" style="height:calc(100% - 250px);">
+              <div style="position:relative;padding-left:110px;">
+                <a class="avatar avatar-100 bg-white img-bordered" href="javascript:void(0)" style="position:absolute;top:-50px;left:0;">
+                  <img src="{{ user.bemsuser.get_profile_image }}" alt="">
+                </a>
+                <div class="m-b-20">
+                  <div class="font-size-20">{{ user.get_full_name }}</div>
+                  <div class="font-size-14">{{ user.username }}</div>
+                </div>
+              </div>
+              <p>
+
+              </p>
+            </div>
+            <!--<div class="card-footer bg-blue-grey-400 p-30 h-100">
+              <div class="row no-space">
+                <div class="col-xs-4">
+                  <h4>Next:</h4>
+                </div>
+                <div class="col-xs-8">
+
+                </div>
+              </div>
+            </div>-->
+          </div>
+        </div>
         <div class="col-lg-8 col-md-12">
 
           <div class="row">
@@ -12,7 +43,7 @@
                   <h3 class="panel-title">Avís!</h3>
                 </div>
                 <div class="panel-body">Degut a una errada a la configuració de les assignatures de modalitat no apareixen els alumnes correctes.
-                A partir de dimecres 16 ja es podrà utilitzar BEMS amb normalitat.</div>
+                A partir de <b>divendres 18</b> ja es podrà utilitzar BEMS amb normalitat.</div>
               </div>
             </div>
 
@@ -34,5 +65,41 @@
 
           </div>
         </div>
+    </div>
+    <div class="row">
+        <ul class="nav-quick nav-quick-bordered row">
+            <li class="nav-item col-md-2 col-xs-4">
+              <a class="nav-link" href="javascript:void(0)">
+                <i class="icon wb-settings" aria-hidden="true"></i> Settings
+              </a>
+            </li>
+            <li class="nav-item col-md-2 col-xs-4">
+              <a class="nav-link" href="javascript:void(0)">
+                <i class="icon wb-user" aria-hidden="true"></i> User list
+                <span class="tag tag-success">8</span>
+              </a>
+            </li>
+            <li class="nav-item col-md-2 col-xs-4">
+              <a class="nav-link" href="javascript:void(0)">
+                <i class="icon wb-wrench" aria-hidden="true"></i> Admin tools
+              </a>
+            </li>
+            <li class="nav-item col-md-2 col-xs-4">
+              <a class="nav-link" href="javascript:void(0)">
+                <i class="icon wb-upload" aria-hidden="true"></i> Upload
+                <span class="tag tag-danger">13</span>
+              </a>
+            </li>
+            <li class="nav-item col-md-2 col-xs-4">
+              <a class="nav-link" href="javascript:void(0)">
+                <i class="icon wb-lock" aria-hidden="true"></i> Lock
+              </a>
+            </li>
+            <li class="nav-item col-md-2 col-xs-4">
+              <a class="nav-link" href="javascript:void(0)">
+                <i class="icon wb-search" aria-hidden="true"></i> Search
+              </a>
+            </li>
+          </ul>
     </div>
 {% endblock content %}
