--- a/templates/incidents/incident_form.html
+++ b/templates/incidents/incident_form.html
@@ -76,7 +76,7 @@
                     <div class="row form-group">
                         <label class="control-label col-sm-2">Dia</label>
                         <div class="col-sm-5">
-                            <input type="text" class="form-control" data-plugin="datepicker" data-date-format="dd/mm/yyyy" name="{{ form.date.html_name }}" id="{{ form.date.id_for_label }}">
+                            <input type="text" class="form-control" data-plugin="datepicker" data-date-format="dd/mm/yyyy" data-date-week-start="1" data-date-end-date="0d" name="{{ form.date.html_name }}" id="{{ form.date.id_for_label }}">
                         </div>
                         <label class="control-label col-sm-1">Hora</label>
                         <div class="col-sm-4">
