--- a/templates/special/500.html
+++ b/templates/special/500.html
@@ -1,14 +1,13 @@
+
 <!DOCTYPE html>
-{% load i18n %}
 <html class="no-js css-menubar" lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>BEMS | {% trans '500 Error' %}</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
+  <meta name="description" content="bootstrap admin template">
+  <meta name="author" content="">
+  <title>BEMS | {% trans '500 Error' %}</title>
 
     <link rel="apple-touch-icon" sizes="57x57" href="/static/fav/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/static/fav/apple-touch-icon-60x60.png">
@@ -28,126 +27,125 @@
     <meta name="msapplication-TileColor" content="#b91d47">
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
     <meta name="theme-color" content="#ffffff">
-
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/css/bootstrap-extend.min.css">
-    <link rel="stylesheet" href="/static/css/site.min.css">
-
-    <!-- Plugins -->
-    <link rel="stylesheet" href="/static/vendor/animsition/animsition.css">
-    <link rel="stylesheet" href="/static/vendor/asscrollable/asScrollable.css">
-    <link rel="stylesheet" href="/static/vendor/switchery/switchery.css">
-    <link rel="stylesheet" href="/static/vendor/intro-js/introjs.css">
-    <link rel="stylesheet" href="/static/vendor/slidepanel/slidePanel.css">
-    <link rel="stylesheet" href="/static/vendor/flag-icon-css/flag-icon.css">
-
-    <!-- Page -->
-    <link rel="stylesheet" href="/static/css/pages/errors.css">
-
-    <!-- Fonts -->
-    <link rel="stylesheet" href="/static/fonts/web-icons/web-icons.min.css">
-    <link rel="stylesheet" href="/static/fonts/brand-icons/brand-icons.min.css">
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,300italic'>
-
-    <!--[if lt IE 9]>
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/css/bootstrap-extend.min.css">
+  <link rel="stylesheet" href="/static/css/site.min.css">
+  <!-- Plugins -->
+  <link rel="stylesheet" href="/static/vendor/animsition/animsition.css">
+  <link rel="stylesheet" href="/static/vendor/asscrollable/asScrollable.css">
+  <link rel="stylesheet" href="/static/vendor/switchery/switchery.css">
+  <link rel="stylesheet" href="/static/vendor/intro-js/introjs.css">
+  <link rel="stylesheet" href="/static/vendor/slidepanel/slidePanel.css">
+  <link rel="stylesheet" href="/static/vendor/flag-icon-css/flag-icon.css">
+  <link rel="stylesheet" href="/static/css/pages/errors.css">
+  <!-- Fonts -->
+  <link rel="stylesheet" href="/static/fonts/web-icons/web-icons.min.css">
+  <link rel="stylesheet" href="/static/fonts/brand-icons/brand-icons.min.css">
+  <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,300italic'>
+  <!--[if lt IE 9]>
     <script src="/static/vendor/html5shiv/html5shiv.min.js"></script>
     <![endif]-->
-
-    <!--[if lt IE 10]>
+  <!--[if lt IE 10]>
     <script src="/static/vendor/media-match/media.match.min.js"></script>
     <script src="/static/vendor/respond/respond.min.js"></script>
     <![endif]-->
-
-    <!-- Scripts -->
-    <script src="/static/vendor/modernizr/modernizr.js"></script>
-    <script src="/static/vendor/breakpoints/breakpoints.js"></script>
-    <script>
-        Breakpoints();
-    </script>
+  <!-- Scripts -->
+  <script src="/static/vendor/breakpoints/breakpoints.js"></script>
+  <script>
+  Breakpoints();
+  </script>
 </head>
-<body class="page-error page-error-404 layout-full">
-<!--[if lt IE 8]>
+<body class="animsition page-error page-error-505 layout-full">
+  <!--[if lt IE 8]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
-
-<!-- Page -->
-<div class="page animsition vertical-align text-center" data-animsition-in="fade-in"
-     data-animsition-out="fade-out">
+  <!-- Page -->
+  <div class="page vertical-align text-xs-center" data-animsition-in="fade-in" data-animsition-out="fade-out">
     <div class="page-content vertical-align-middle">
-        <header>
-            <h1 class="animation-slide-top">500</h1>
-            <p>{% trans 'Something went wrong!' %}</p>
-        </header>
-        <p class="error-advise">{% trans 'IF THE PROBLEM PERSISTS FEEL FREE TO CONTACT US. IN THE MEANTIME, TRY REFRESHING.' %}</p>
-        <a class="btn btn-primary btn-round" href="/">{% trans 'Return home' %}</a>
-
-        <footer class="page-copyright">
-            <p>POWERED BY beat.bcn</p>
-            <p>© 2016 {% trans 'ALL RIGHTS RESERVED' %}.</p>
-            <div class="social">
-                <a href="http://twitter.com/beatbcn">
-                    <i class="icon bd-twitter" aria-hidden="true"></i>
-                </a>
-                <a href="http://facebook.com/beatdotbcn">
-                    <i class="icon bd-facebook" aria-hidden="true"></i>
-                </a>
-                <a href="https://plus.google.com/u/2/112406600943631572276/about">
-                    <i class="icon bd-google-plus" aria-hidden="true"></i>
-                </a>
-        </footer>
+      <header>
+        <h1 class="animation-slide-top">500</h1>
+        <p>Page Not Found !</p>
+      </header>
+      <p class="error-advise">YOU SEEM TO BE TRYING TO FIND HIS WAY HOME</p>
+      <a class="btn btn-primary btn-round" href="../index.html">GO TO HOME PAGE</a>
+      <footer class="page-copyright">
+        <p>WEBSITE BY amazingSurge</p>
+        <p>© 2016. All RIGHT RESERVED.</p>
+        <div class="social">
+          <a href="javascript:void(0)">
+            <i class="icon bd-twitter" aria-hidden="true"></i>
+          </a>
+          <a href="javascript:void(0)">
+            <i class="icon bd-facebook" aria-hidden="true"></i>
+          </a>
+          <a href="javascript:void(0)">
+            <i class="icon bd-dribbble" aria-hidden="true"></i>
+          </a>
+        </div>
+      </footer>
     </div>
-</div>
-<!-- End Page -->
+  </div>
+  <!-- End Page -->
+  <!-- Core  -->
+  <script src="/static/vendor/babel-external-helpers/babel-external-helpers.js"></script>
+  <script src="/static/vendor/jquery/jquery.js"></script>
+  <script src="/static/vendor/tether/tether.js"></script>
+  <script src="/static/vendor/bootstrap/bootstrap.js"></script>
+  <script src="/static/vendor/animsition/animsition.js"></script>
+  <script src="/static/vendor/mousewheel/jquery.mousewheel.js"></script>
+  <script src="/static/vendor/asscrollbar/jquery-asScrollbar.js"></script>
+  <script src="/static/vendor/asscrollable/jquery-asScrollable.js"></script>
+  <script src="/static/vendor/ashoverscroll/jquery-asHoverScroll.js"></script>
+  <!-- Plugins -->
+  <script src="/static/vendor/switchery/switchery.min.js"></script>
+  <script src="/static/vendor/intro-js/intro.js"></script>
+  <script src="/static/vendor/screenfull/screenfull.js"></script>
+  <script src="/static/vendor/slidepanel/jquery-slidePanel.js"></script>
+  <!-- Scripts -->
+  <script src="/static/js/State.js"></script>
+  <script src="/static/js/Component.js"></script>
+  <script src="/static/js/Plugin.js"></script>
+  <script src="/static/js/Base.js"></script>
+  <script src="/static/js/Config.js"></script>
+  <script src="/static/js/Section/Menubar.js"></script>
+  <script src="/static/js/Section/GridMenu.js"></script>
+  <script src="/static/js/Section/Sidebar.js"></script>
+  <script src="/static/js/Section/PageAside.js"></script>
+  <script src="/static/js/Plugin/menu.js"></script>
+  <script src="/static/js/config/colors.js"></script>
+  <script src="/static/js/config/tour.js"></script>
+  <script>
+  Config.set('assets', '/static');
+  </script>
+  <!-- Page -->
+  <script src="/static/js/Site.js"></script>
+  <script src="/static/js/Plugin/asscrollable.js"></script>
+  <script src="/static/js/Plugin/slidepanel.js"></script>
+  <script src="/static/js/Plugin/switchery.js"></script>
+  <script>
+  (function(document, window, $) {
+    'use strict';
+    var Site = window.Site;
+    $(document).ready(function() {
+      Site.run();
+    });
+  })(document, window, jQuery);
+  </script>
 
+    <!-- Sentry JS SDK 2.1.+ required -->
+<script src="https://cdn.ravenjs.com/2.1.0/raven.min.js"></script>
 
-<!-- Core  -->
-<script src="/static/vendor/jquery/jquery.js"></script>
-<script src="/static/vendor/bootstrap/bootstrap.js"></script>
-<script src="/static/vendor/animsition/jquery.animsition.js"></script>
-<script src="/static/vendor/asscroll/jquery-asScroll.js"></script>
-<script src="/static/vendor/mousewheel/jquery.mousewheel.js"></script>
-<script src="/static/vendor/asscrollable/jquery.asScrollable.all.js"></script>
-<script src="/static/vendor/ashoverscroll/jquery-asHoverScroll.js"></script>
+{% if request.sentry.id %}
+  <script>
+  Raven.showReportDialog({
+    // grab the eventId generated by the Sentry SDK
+    eventId: '{{ request.sentry.id }}',
 
-<!-- Plugins -->
-<script src="/static/vendor/switchery/switchery.min.js"></script>
-<script src="/static/vendor/intro-js/intro.js"></script>
-<script src="/static/vendor/screenfull/screenfull.js"></script>
-<script src="/static/vendor/slidepanel/jquery-slidePanel.js"></script>
-
-<!-- Scripts -->
-<script src="/static/js/core.js"></script>
-<script src="/static/js/site.js"></script>
-
-<script src="/static/js/sections/menu.js"></script>
-<script src="/static/js/sections/menubar.js"></script>
-<script src="/static/js/sections/gridmenu.js"></script>
-<script src="/static/js/sections/sidebar.js"></script>
-
-<script src="/static/js/configs/config-colors.js"></script>
-<script src="/static/js/configs/config-tour.js"></script>
-
-<script src="/static/js/components/asscrollable.js"></script>
-<script src="/static/js/components/animsition.js"></script>
-<script src="/static/js/components/slidepanel.js"></script>
-<script src="/static/js/components/switchery.js"></script>
-
-<!-- Scripts For This Page -->
-
-
-<script>
-    (function (document, window, $) {
-        'use strict';
-        var Site = window.Site;
-        $(document).ready(function () {
-            Site.run();
-        });
-    })(document, window, jQuery);
-</script>
-
-
+    // use the public DSN (dont include your secret!)
+    dsn: 'https://80379e3334ac409290319ae4f7f20929@sentry.io/103682'
+  });
+  </script>
+{% endif %}
 </body>
-
 </html>
